Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.


2007-Sep-29 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
  * drc.c made a change near line 584 to comment out pt_pad->m_NetCode test against 
    zero.  This was preventing me from laying out my board.  It's possible that 
    this broke something else, but it is also clear that something was broke before 
    this change, because I could not put down some tracks.
  * beautification, house keeping.    


2007-Sep-29 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ pcbnew
	create new file onleftclick.cpp
	move onleftcligk() and onleftDcligk() from edit.cpp to onleftclick.cpp
	

2007-Sep-27 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ all
    test case for OnLeftClick() handling enhancements.
    TAB key removed, because is not needed for block selection and double click. 
	(SHIHT ou CTRL or ALT key is sufficient to suppress the popup menu
	if needed for a double click )
	Some work is still needed, of course
+ pcbnew
	Color grid setting now works


2007-Sep-26 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ all
    test case for OnLeftClick() handling from a release circumstance.
    a few simple changes to void WinEDA_DrawPanel::OnMouseEvent( wxMouseEvent& event ),
    but they affect all programs in a subtle way.
    TAB key allow double clicking, but is not needed for block selection. 

+ pcbnew
    GENERAL_COLLECTOR::GetCount() returns int, not unsigned.  Was tired of the
    compiler complaining when using an int ndx.


2007-Sep-25 UPDATE   Dick Hollenbeck <dick@softplc.com>