@@ -146,6 +146,8 @@ public:
         return wxT("TRACK");
     }
     
+    
+#if defined(DEBUG)    
     /**
      * Function Show
      * is used to output the object tree, currently for debugging only.
@@ -154,7 +156,7 @@ public:
      * @param os The ostream& to output to.
      */
     void Show( int nestLevel, std::ostream& os );
-    
+#endif    
 };
 
 
@@ -211,6 +213,19 @@ public:
     {
         return wxT("VIA");
     }
+
+    
+#if defined(DEBUG)    
+    /**
+     * Function Show
+     * is used to output the object tree, currently for debugging only.
+     * @param nestLevel An aid to prettier tree indenting, and is the level 
+     *          of nesting of this object within the overall tree.
+     * @param os The ostream& to output to.
+     */
+    void Show( int nestLevel, std::ostream& os );
+#endif    
+    
 };
 
 
