@@ -5,6 +5,13 @@ Please add newer entries at the top, list the date and your name with
 email address.
 
 
+2007-Sep-30 UPDATE   Dick Hollenbeck <dick@softplc.com>
+================================================================================
++ pcbnew
+    Added dedicated Show() function for SEGVIA.  Enhanced BOARD_ITEM::MenuText()
+    for SEGVIA.  Added to todo.txt.
+
+
 2007-Sep-29 UPDATE   Dick Hollenbeck <dick@softplc.com>
 ================================================================================
 + pcbnew
